--- a/formulario.html
+++ b/formulario.html
@@ -10,7 +10,7 @@
 
 <div data-role="page" id="pageone">
   <div data-role="header">
-  <h1>Formulario</h1>
+  <h1>jQuery Mobile Forms</h1>
   </div>
 
 <div data-role="main" class="ui-content">
@@ -168,5 +168,8 @@
    <input type="reset" value="borrar formulario" name="btnborrar"></input>
 <input type="submit" value="enviar formulario" name="btnenviar"></input>
 </form>
+</div>
+</div>
+
 </body>
 </html>
